Dependencies update and some tweaks